--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.54",
+    "electron-builder": "^22.10.5",
     "recursive-readdir": "^2.2.2",
     "replace-in-file": "^6.2.0",
     "webp-converter": "^2.3.1"
